<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
      tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Red"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#FF0000"
        android:id="@+id/textView" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Orange"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#FF6600"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Yellow"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#FFFF00"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Green"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#00FF00"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Blue"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#0000FF"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Indigo"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#4b0082"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Voilet"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#8F5E99"
        android:id="@+id/textView7" />
</LinearLayout>
